kubernetes/main/apps/default/nas/portainer/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: default
spec:
  ports:
    - port: 8001
      targetPort: 8001
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: portainer
  namespace: default
  labels:
    kubernetes.io/service-name: portainer
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.1.5
    conditions:
      ready: true
      serving: true
      terminating: false
ports:
  - name: https
    port: 8001
    protocol: TCP
