kubernetes/main/apps/default/nas/portainer/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-portainer
  namespace: default
spec:
  ingressClassName: internal
  rules:
    - host: &host portainer.garb.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portainer
                port:
                  number: 8001
  tls:
    - hosts:
        - *host
      secretName: wildcard-cert-tls
