kubernetes/main/apps/default/nas/portainer/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portainer-route
  namespace: default
spec:
  hostnames:
    - portainer.garb.dev
  parentRefs:
    - name: envoy-internal
      namespace: networking
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: portainer
          port: 8001
